--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint-config-prettier": "^8.8.0",
         "nodemon": "^2.0.22",
         "prettier": "^2.8.8",
+        "sass": "^1.63.3",
         "ts-node": "^10.9.1"
     }
 }
